# copiloto

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  main.py
app/logic/: __init__.py  chains.py  ingest.py  prompts.py  retriever.py
app/utils/: __init__.py  ui.py
